--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,6 @@
     <div class="main">
       <%= yield %>
     </div>
-    <%= render "layouts/pagebackground" %>
+    <%#= render "layouts/pagebackground" %>
   </body>
 </html>
