--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -5,7 +5,7 @@
 
 <%= render "schedules/search" %>
 
-<% if user_signed_in? && current_user.role === 'admin' %>
+<% if user_signed_in? && current_user.type === 'Admin' %>
   <%= link_to "Add new schedule", new_schedule_path, class: "btn btn-dark" %>
   <%= link_to "Add new flight", new_flight_path, class: "btn btn-secondary" %>
 <% end %>
