--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,3 +1,12 @@
+
+<!--<%#= @schedule.flight.origin %><br/>-->
+<!--<%#= @schedule.flight.destination %><br/>-->
+<!--<%#= @schedule.departure %><br/>-->
+<!--<%#= @schedule.flight.duration %><span> mins.</span><br/>-->
+<!--<%#= @schedule.flight.total_seats %><br/>-->
+
+
+
 <%= form_with(model: booking, local: true) do |form| %>
   <% if booking.errors.any? %>
     <div id="error_explanation">
@@ -11,14 +20,12 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
-  </div>
+  <%= form.hidden_field :schedule_id, value: params[:id] %>
+  <%#= f.hidden_field :type, value: "Member" %>
 
   <div class="field">
-    <%= form.label :schedule_id %>
-    <%= form.text_field :schedule_id %>
+    <%= form.label :seats_booked, "Seats Required", class: "form-label" %>
+    <%= form.text_field :seats_booked, class: "form_control" %>
   </div>
 
   <div class="actions">
