--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,29 +1,39 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Bookings</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Schedule</th>
-      <th colspan="3"></th>
-    </tr>
+<table class="table table-striped table-bordered table-hover table-scroll">
+
+  <thead class="table-dark">
+  <tr>
+    <th>Sr. No.</th>
+    <th>User</th>
+    <th>Origin</th>
+    <th>Destination</th>
+    <th>Departure</th>
+    <th>Duration</th>
+    <th>Seats Booked</th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @bookings.each do |booking| %>
-      <tr>
-        <td><%= booking.user %></td>
-        <td><%= booking.schedule %></td>
-        <td><%= link_to 'Show', booking %></td>
-        <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
-        <td><%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <% @bookings.each.with_index(1) do |booking, index| %>
+    <tr>
+      <td><%= index %></td>
+      <td><%= booking.member.name %></td>
+      <td><%= booking.schedule.flight.origin %></td>
+      <td><%= booking.schedule.flight.destination %></td>
+      <td><%= booking.schedule.flight.duration %></td>
+      <td><%= booking.seats_booked %></td>
+      <td><%=  %></td>
+      <td><%= link_to 'Show', booking %></td>
+      <td><%= link_to 'Edit', edit_booking_path(booking) %></td>
+      <td><%= link_to 'Destroy', booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
     <% end %>
   </tbody>
+
 </table>
 
-<br>
+<!--<br>-->
 
-<%= link_to 'New Booking', new_booking_path %>
+<%#= link_to 'New Booking', new_booking_path %>
