--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,14 +1,35 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>User:</strong>
-  <%= @booking.user %>
-</p>
+<table class="table table-striped table-bordered table-hover table-scroll">
 
-<p>
-  <strong>Schedule:</strong>
-  <%= @booking.schedule %>
-</p>
+  <thead class="table-dark">
+  <tr>
+    <th>User</th>
+    <th>Origin</th>
+    <th>Destination</th>
+    <th>Departure</th>
+    <th>Duration</th>
+    <th>Seats Booked</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+
+  <tbody>
+    <tr>
+      <td><%= @booking.member.name %></td>
+      <td><%= @booking.schedule.flight.origin %></td>
+      <td><%= @booking.schedule.flight.destination %></td>
+      <td><%= @booking.schedule.departure %></td>
+      <td><%= @booking.schedule.flight.duration %><span> mins.</span></td>
+      <td><%= @booking.seats_booked %></td>
+      <td><%= link_to 'Show', @booking %></td>
+      <td><%= link_to 'Edit', edit_booking_path(@booking) %></td>
+      <td><%= link_to 'Destroy', @booking, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  </tbody>
+
+</table>
+
 
 <%= link_to 'Edit', edit_booking_path(@booking) %> |
 <%= link_to 'Back', bookings_path %>
