--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_field :duration %>
   </div>
 
+  <div>
+    <%= f.label :total_seats %><br/>
+    <%= f.text_field :total_seats %>
+  </div>
 
   <br/>
   <div>
