--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -9,6 +9,7 @@
     <th>Origin</th>
     <th>Destination</th>
     <th>Duration</th>
+    <th>Total Seats</th>
   </tr>
   </thead>
 
@@ -20,6 +21,7 @@
       <td><%= flight.origin %></td>
       <td><%= flight.destination %></td>
       <td><%= flight.duration %><span> mins.</span></td>
+      <td><%= flight.total_seats %></td>
     </tr>
   <% end %>
   </tbody>
