--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,6 +1,11 @@
 <br/>
-<h3>Your booking has been confirmed!</h3>
-<h4>Thanks for booking with us!</h4>
+<div class="d-flex justify-content-between">
+  <div>
+    <h3>Your booking has been confirmed!</h3>
+    <h4>Thanks for booking with us!</h4>
+  </div>
+  <%= image_tag("#{@booking.schedule.flight.operator}_logo.png", height: 80, class:"flight-logo") %>
+</div>
 <br/><br/>
 
 <h3>Booking Details:</h3>
@@ -44,7 +49,7 @@
 
   <thead class="table-dark">
   <tr>
-    <th width="5%">Sr. No.</th>
+    <th width="10%">Sr. No.</th>
     <th>Name</th>
     <th>Gender</th>
     <th>Age</th>
@@ -72,6 +77,6 @@
 
 <br/><br/><br/><br/>
 <h6>For any queries, contact our customer support:<br/><br/>
-  email: customersupport@fba.com<br/>
-  phone: +91-8629348824
+  email: <a href="mailto:customersupport@fba.com">customersupport@fba.com</a><br/>
+  phone: <a href="tel:918629348824">+91-8629348824</a>
 </h6>
