--- a/app/views/bookings/_traveller_fields.html.erb
+++ b/app/views/bookings/_traveller_fields.html.erb
@@ -1,15 +1,7 @@
 <div class='nested-fields'>
-  <span class="field">
+  <div class="field">
     <%= f.label :name %>
     <%= f.text_field :name %>
-  </span>
-  <span class="field">
-    <%= f.label :gender %>
-    <%= f.select :gender, %w[Male Female Other], { prompt:'select' } %>
-  </span>
-  <span class="field">
-    <%= f.label :age %>
-    <%= f.text_field :age %>
-  </span>
+  </div>
   <%= link_to_remove_association "Remove this person", f, class: 'btn btn-danger btn-sm' %>
 </div>
