--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,5 +1,5 @@
 <% if flash.any? %>
     <% flash.each do |type, msg| %>
-        <div class="alert alert-warning"> <%= msg %> </div>
+        <div class="alert alert-primary"> <%= msg %> </div>
     <% end %>
 <% end %>
