--- a/app/views/schedules/_search.html.erb
+++ b/app/views/schedules/_search.html.erb
@@ -23,7 +23,7 @@
         </div>
     </div>
     <br/><br/>
-    <%= button_tag "Search for flights", class: "btn btn-primary mt-5", id: "search-flight-button" %>
+    <%= button_tag "Search for flights", class: "btn btn-primary", id: "search-flight-button" %>
   <% end %>
 </div>
 </div>
