--- a/app/assets/stylesheets/flights.css
+++ b/app/assets/stylesheets/flights.css
@@ -14,5 +14,6 @@
     background-color: white;
     padding: 3rem;
     border-radius: 20px;
-    border: 1px solid #b1b1b1;
+    /*border: 1px solid #b1b1b1;*/
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
