--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -12,7 +12,7 @@
     padding: 3rem;
     width: 20%;
     background-color: white;
-    border: 1px solid #b1b1b1;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     margin-bottom: 3rem;
 }
