--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -14,7 +14,7 @@
   display: inline-flex;
   text-align: center;
   padding: 3rem;
-  border: 1px solid #b1b1b1;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   background-color: white;
 }
