--- a/app/assets/stylesheets/signup.css
+++ b/app/assets/stylesheets/signup.css
@@ -11,7 +11,7 @@
     align-items: center;
     padding: 3rem;
     background-color: white;
-    border: 1px solid #b1b1b1;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     margin-bottom: 3rem;
 }
