--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -4,11 +4,18 @@
 
 <%= render "schedules/search", class: "search-box-partial" %>
 
+<!--<div class="d-flex justify-content-center">-->
+  <%#= show_all_bookings_if_user %>
+  <%#= show_add_bookings_schedules_buttons_if_admin %>
+<!--</div>-->
+
 <div class="d-flex justify-content-center">
-  <% if user_signed_in? && current_user.type === 'Admin' %>
+  <% display_if_admin do %>
     <%= link_to "Add new schedule", new_schedule_path, class: "btn btn-dark mx-2" %>
     <%= link_to "Add new flight", flight_data.new_flight_path, class: "btn btn-secondary mx-2" %>
-  <% elsif user_signed_in? && current_user.type === 'Member' %>
+  <% end %>
+
+  <% display_if_user do %>
     <%= link_to "See all your bookings", bookings_path, class: "btn btn-dark" %>
   <% end %>
 </div>
