--- a/engines/flight_data/app/assets/stylesheets/flight_data/flights.css
+++ b/engines/flight_data/app/assets/stylesheets/flight_data/flights.css
@@ -13,5 +13,5 @@
     background-color: white;
     padding: 3rem;
     border-radius: 20px;
-    border: 1px solid #b1b1b1;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
